progressif/main/default/objects/Code_NAF__c/Code_NAF__c.object-meta.xml
<CustomObject>
    <label>Code NAF</label>
    <nameField>
        <label>Libellé</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes NAF</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>