progressif/main/default/objects/Code_NAF__c/fields/Activities_areas__c.field-meta.xml
<CustomField>
    <fullName>Activities_areas__c</fullName>
    <description>Secteurs d&#39;activités définis par défaut pour ce code NAF</description>
    <label>Secteurs d&#39;activités</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Secteurs_d_activites</valueSetName>
    </valueSet>
</CustomField>