progressif/main/default/objects/Code_NAF__c/fields/Automatic_prospecting_LT115__c.field-meta.xml
<CustomField>
    <fullName>Automatic_prospecting_LT115__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur positionné si le code NAF est éligible à la première lettre de prospection automatique</description>
    <label>Prospection automatique LT115</label>
    <type>Checkbox</type>
</CustomField>