progressif/main/default/objects/Code_NAF__c/fields/Automatic_prospecting_LT115_reminder__c.field-meta.xml
<CustomField>
    <fullName>Automatic_prospecting_LT115_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur positionné si le code NAF est éligible à la lettre de rappel de prospection automatique</description>
    <label>Prospection automatique LT115 rappel</label>
    <type>Checkbox</type>
</CustomField>