progressif/main/default/objects/Code_NAF__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>identifiant unique du code NAF</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>