progressif/main/default/objects/Code_NAF__c/fields/DA_model__c.field-meta.xml
<CustomField>
    <fullName>DA_model__c</fullName>
    <description>Définit le modèle de Demande d&#39;autorisation à joindre à la lettre de prospection automatique</description>
    <label>Modèle de DA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DA_12_Cours-danse_Gym_Salle-sport</fullName>
            </value>
            <value>
                <fullName>DA_15_Etablissements-divers</fullName>
            </value>
            <value>
                <fullName>DA_18_CHR-residence-touristique</fullName>
            </value>
            <value>
                <fullName>DA_28Bis_Hotels-Residence-de-tourisme</fullName>
            </value>
            <value>
                <fullName>DA_30_Magasins_Commerces-divers</fullName>
            </value>
            <value>
                <fullName>DA_32_Institutions-sociales-et-medico-sociales</fullName>
            </value>
            <value>
                <fullName>DA_33_Etablissement-sante</fullName>
            </value>
            <value>
                <fullName>DA_7_Salon-coiffure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>