progressif/main/default/objects/Code_NAF__c/fields/Eligible__c.field-meta.xml
<CustomField>
    <fullName>Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur positionné si le code NAF est intéressant pour la SACEM. Il permettra à l&#39;interface ALTARES de savoir si le prospect doit être créé ou non dans le référentiel du CRM</description>
    <label>Eligible</label>
    <type>Checkbox</type>
</CustomField>