progressif/main/default/objects/Code_NAF__c/fields/Field_approach__c.field-meta.xml
<CustomField>
    <fullName>Field_approach__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur positionné si le code NAF est éligible à la prospection sur le terrain </description>
    <label>Démarche terrain</label>
    <type>Checkbox</type>
</CustomField>