progressif/main/default/objects/Code_NAF__c/fields/Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Name__c</fullName>
    <label>Libellé long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>