progressif/main/default/objects/Code_NAF__c/fields/Manual_prospecting__c.field-meta.xml
<CustomField>
    <fullName>Manual_prospecting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur positionné si le code NAF est éligible à la prospection manuelle. Dans ce cas, c&#39;est le chargé de clientèle qui choisit ou non d&#39;envoyer une lettre de prospection au Compte</description>
    <label>Prospection manuelle</label>
    <type>Checkbox</type>
</CustomField>