progressif/main/default/objects/Code_NAF__c/fields/Model_Prospecting_Mail__c.field-meta.xml
<CustomField>
    <fullName>Model_Prospecting_Mail__c</fullName>
    <description>Définit le modèle de courrier de prospection à utiliser pour ce code NAF dans le processus de prospection automatique</description>
    <label>Modèle courrier de prospection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Café restaurant</fullName>
            </value>
            <value>
                <fullName>Générique</fullName>
            </value>
            <value>
                <fullName>Hôtel</fullName>
            </value>
            <value>
                <fullName>Magasin</fullName>
            </value>
            <value>
                <fullName>Salon de coiffure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>