progressif/main/default/objects/Code_NAF__c/fields/Phone_approach__c.field-meta.xml
<CustomField>
    <fullName>Phone_approach__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur positionné si le code NAF est éligible à la prospection téléphonique</description>
    <label>Démarche téléphonique</label>
    <type>Checkbox</type>
</CustomField>