progressif/main/default/objects/Code_NAF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Eligible__c</columns>
    <columns>Activities_areas__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les codes NAF</label>
</ListView>